Created portfolio, services and contact started pages. Fixed styling for home page and navigation. Made the text animated with blue background

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "formidable": "^1.2.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.17",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-scroll": "^1.8.1"
   },
   "keywords": [],
   "author": "",
